--- a/aplikasi-pendaftaran-spring/src/main/resources/templates/sekolah/form.html
+++ b/aplikasi-pendaftaran-spring/src/main/resources/templates/sekolah/form.html
@@ -11,23 +11,32 @@
             <h1>Edit Sekolah</h1>
 
 
-            <form class="form-horizontal" method="post">
-                <div class="form-group">
+            <form class="form-horizontal" method="post" th:object="${sekolah}">
+                <div class="form-group"  th:classappend="${#fields.hasErrors('kode')} ? 'has-error'">
                     <label for="kode" class="col-sm-2 control-label">Kode</label>
                     <div class="col-sm-10">
-                        <input type="text" name="kode" class="form-control" id="kode" placeholder="Kode Sekolah" />
+                        <input type="text" name="kode" 
+                               th:field="*{kode}"
+                               class="form-control" id="kode" placeholder="Kode Sekolah" />
+                        <span class="help-block" th:errors="*{kode}">Pesan error</span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" th:classappend="${#fields.hasErrors('nama')} ? 'has-error'">
                     <label for="nama" class="col-sm-2 control-label">Nama</label>
                     <div class="col-sm-10">
-                        <input type="text" name="nama" class="form-control" id="nama" placeholder="Nama Sekolah" />
+                        <input type="text" name="nama" 
+                               th:field="*{nama}"
+                               class="form-control" id="nama" placeholder="Nama Sekolah" />
+                        <span class="help-block" th:errors="*{nama}">Pesan error</span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" th:classappend="${#fields.hasErrors('alamat')} ? 'has-error'">
                     <label for="alamat" class="col-sm-2 control-label">Alamat</label>
                     <div class="col-sm-10">
-                        <input type="text" name="alamat" class="form-control" id="alamat" placeholder="Alamat Sekolah" />
+                        <input type="text" name="alamat" 
+                               th:field="*{alamat}"
+                               class="form-control" id="alamat" placeholder="Alamat Sekolah" />
+                        <span class="help-block" th:errors="*{alamat}">Pesan error</span>
                     </div>
                 </div>
                 <div class="form-group">
