--- a/aplikasi-pendaftaran-spring/src/main/resources/templates/siswa/form.html
+++ b/aplikasi-pendaftaran-spring/src/main/resources/templates/siswa/form.html
@@ -11,7 +11,7 @@
             <h1>Edit Siswa</h1>
 
 
-            <form class="form-horizontal" method="post" th:object="${siswa}">
+            <form class="form-horizontal" method="post" th:object="${siswa}" enctype="multipart/form-data">
                 <div class="form-group"  th:classappend="${#fields.hasErrors('nama')} ? 'has-error'">
                     <label for="nama" class="col-sm-2 control-label">Nama</label>
                     <div class="col-sm-10">
@@ -39,10 +39,18 @@
                         <span class="help-block" th:errors="*{tanggalLahir}">Pesan error</span>
                     </div>
                 </div>
+                <div class="form-group" >
+                    <label class="col-sm-2 control-label">Foto</label>
+                    <div class="col-sm-10">
+                        <label class="btn btn-default btn-file">
+                            Browse <input type="file" name="foto" style="display: none;" />
+                        </label>
+                    </div>
+                </div>
                 <div class="form-group" th:classappend="${#fields.hasErrors('asalSekolah')} ? 'has-error'">
                     <label for="asalSekolah" class="col-sm-2 control-label">Asal Sekolah</label>
                     <div class="col-sm-10">
-                        <select name="asalSekolah" th:field="*{asalSekolah}">
+                        <select class="form-control" name="asalSekolah" th:field="*{asalSekolah}">
                             <option value="">Pilih Sekolah</option>
                             <option th:each="s : ${daftarSekolah}"
                                     th:value="${s.id}"
@@ -57,7 +65,6 @@
                     </div>
                 </div>
             </form>
-
         </section>
     </body>
 </html>
