--- a/aplikasi-pendaftaran-spring/src/main/resources/templates/layout.html
+++ b/aplikasi-pendaftaran-spring/src/main/resources/templates/layout.html
@@ -54,9 +54,12 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="../navbar/">Default</a></li>
-                        <li><a href="../navbar-static-top/">Static top</a></li>
-                        <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+                        <li th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</li>
+                        <li class="active">
+                            <form th:action="@{/logout}" method="post">
+                                <input type="submit" value="Sign Out"/>
+                            </form>
+                        </li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
